<resources>
    <string name="app_name">Android-Homework2</string>

    <string name="btn_sync">Sync with server</string>
    <string name="txt_last_name">Last name</string>
    <string name="btn_delete">Delete</string>
    <string name="txt_first_name">First name</string>
    <string name="btn_add">Add</string>
    <string name="input_error">Please insert the full name</string>
    <string name="delete_complete"> user(s) deleted</string>
    <string name="delete_incomplete">Users not found</string>
    <string name="fetch_complete">Data fetched</string>
    <string name="fetch_incomplete">Data could not be fetched</string>
    <string name="clear_all">Clear</string>
    <string name="clear_incomplete">No data to clear</string>
    <string name="clear_complete">user(s) deleted</string>
</resources>
