<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecycleViewFragment"
    android:background="@color/colorPrimary">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:background="@color/colorAccent"
        android:scrollbars="vertical"
        app:layout_constraintHeight_percent="0.58"
        app:layout_constraintTop_toBottomOf="@id/btnClearAll"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/layoutFirstName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0"/>

    <Button
        android:id="@+id/btnClearAll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/clear_all"
        android:textColor="@color/colorAccent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="10dp"
        android:textSize="20sp"
        app:layout_constraintHeight_percent="0.07"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutFirstName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:autofillHints="@string/txt_first_name"
        android:background="@color/colorPrimary"
        android:hint="@string/txt_first_name"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/layoutLastName"
        app:layout_constraintEnd_toEndOf="@id/btnAdd"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.55">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtFirstName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/colorAccent" />
    </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/btn_add"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/btnDelete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/layoutFirstName"
            app:layout_constraintWidth_percent="0.35"
            app:layout_constraintHeight_percent="0.1"
            android:textAlignment="center"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutLastName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:background="@color/colorPrimary"
        android:hint="@string/txt_last_name"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/btnSync"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/btnDelete"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintWidth_percent="0.55"
        android:autofillHints="@string/txt_last_name"
        android:inputType="text">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtLastName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/colorAccent"/>
    </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/btn_delete"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/btnSync"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/layoutLastName"
            app:layout_constraintWidth_percent="0.35"
            app:layout_constraintHeight_percent="0.1"
            android:textAlignment="center"/>

    <Button
        android:id="@+id/btnSync"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_sync"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.07"
        android:textAlignment="center"/>

</androidx.constraintlayout.widget.ConstraintLayout>